After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753942 - Return value error in tracker_miner_files_peer_listener_is_file_watched
Return value error in tracker_miner_files_peer_listener_is_file_watched
Status: RESOLVED FIXED
Product: tracker
Classification: Core
Component: General
git master
Other FreeBSD
: Normal normal
: ---
Assigned To: tracker-general
tracker-general
Depends on:
Blocks:
 
 
Reported: 2015-08-21 17:35 UTC by Ting-Wei Lan
Modified: 2015-09-02 02:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
build: Fix return value error for tracker_miner_files_peer_listener_is_file_watched (1.13 KB, patch)
2015-08-21 17:36 UTC, Ting-Wei Lan
committed Details | Review

Description Ting-Wei Lan 2015-08-21 17:35:40 UTC
These errors showed when compiling tracker with clang:

tracker-miner-files-peer-listener.c:449:2: error: non-void function 'tracker_miner_files_peer_listener_is_file_watched' should return a value [-Wreturn-type]
        g_return_if_fail (TRACKER_IS_MINER_FILES_PEER_LISTENER (listener));
        ^
/home/lantw44/gnome/devinstall/include/glib-2.0/glib/gmessages.h:379:3: note: expanded from macro 'g_return_if_fail'
         return;                                                        \
         ^
tracker-miner-files-peer-listener.c:450:2: error: non-void function 'tracker_miner_files_peer_listener_is_file_watched' should return a value [-Wreturn-type]
        g_return_if_fail (G_IS_FILE (file));
        ^
/home/lantw44/gnome/devinstall/include/glib-2.0/glib/gmessages.h:379:3: note: expanded from macro 'g_return_if_fail'
         return;                                                        \
         ^
2 errors generated.
Comment 1 Ting-Wei Lan 2015-08-21 17:36:27 UTC
Created attachment 309831 [details] [review]
build: Fix return value error for tracker_miner_files_peer_listener_is_file_watched
Comment 2 Martyn Russell 2015-09-01 20:24:01 UTC
Review of attachment 309831 [details] [review]:

Patch looks good, please commit! :)
Comment 3 Ting-Wei Lan 2015-09-02 02:34:12 UTC
Attachment 309831 [details] pushed as 2d550c5 - build: Fix return value error for tracker_miner_files_peer_listener_is_file_watched