build: Fix return value error for tracker_miner_files_peer_listener_is_file_watched

https://bugzilla.gnome.org/show_bug.cgi?id=753942